Exercice 3i et 3ii
