# src/controllers/book.controller.ts
@@ -1,6 +1,10 @@
-import { Controller, Get, Route, Tags } from "tsoa";
+import {Body, Controller, Get, Path, Post, Route, Tags} from "tsoa";
 import { BookDTO } from "../dto/book.dto";
 import { bookService } from "../services/book.service";
+import {AuthorDTO} from "../dto/author.dto";
+import {Author} from "../models/author.model";
+import {authorService} from "../services/author.service";
+import {Book} from "../models/book.model";
 
 @Route("books")
 @Tags("Books")
@@ -9,4 +13,33 @@ export class BookController extends Controller {
   public async getAllBooks(): Promise<BookDTO[]> {
     return bookService.getAllBooks();
   }
+
+  // Récupère un livre par ID
+  @Get("{id}")
+  public async getBookById(id: number): Promise<BookDTO>{
+    let book = await bookService.getBookById(id);
+
+    if(book === null){
+      let error: Error = new Error(`Book ${id} not found`);
+      (error as any).status = 404;
+      throw error;
+    } else {
+      return book;
+    }
+  }
+
+  // Créer un nouveau livre
+  @Post("/")
+  public async createBook(@Body() requestBody : BookDTO): Promise<BookDTO>{
+    const { title, publishYear, author, isbn } = requestBody;
+
+    if(author?.id === undefined){
+      let error: Error = new Error("Author ID is required to create a new book");
+      (error as any).status = 404;
+      throw error;
+    }
+
+    return bookService.createBook(title, publishYear, author?.id, isbn);
+  }
 }
+
